Refactor email handling and add support for resource-based templates
- Moved email templates to `src/main/resources` for better project structure.
- Updated `CorreoUtil` to load HTML templates from resources directory.
- Replaced hard-coded paths with streamlined resource loading in `generarCompraTicket`.
- Added Maven plugins for building executable JARs and managing dependencies.
- Enhanced comments and error logging in `CorreoUtil` for improved debugging.